--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,14 +8,14 @@
         <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.alpha.corona19</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.alpha</groupId>
+    <artifactId>dom</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>dom</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
