--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# application.properties
+spring.datasource.hikari.maximum-pool-size=4
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+
 
