ignore files change server dao/dto/restapi

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 server/src/main/resources/application.properties
+.vscode/launch.json
+
+.vscode/settings.json
