--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animejs": "^3.2.0",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
