--- a/server/src/main/resources/resources/application.properties
+++ b/server/src/main/resources/resources/application.properties
@@ -1,6 +1,8 @@
 # application.properties
 spring.datasource.hikari.maximum-pool-size=4
 
+spring.jpa.open-in-view=false
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
 spring.datasource.username=postgres
 spring.datasource.password=multi1004
