--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -9,10 +9,12 @@
     "animejs": "^3.2.0",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "jshint": "^2.12.0",
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
