--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animejs": "^3.2.0",
+    "axios": "^0.20.0",
     "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "jshint": "^2.12.0",
